--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,8 +6,13 @@
     box-sizing: border-box;
 }
 
-label, input{
+label, input, button{
     all: unset
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 main{
@@ -16,9 +21,19 @@ main{
     align-items: center;
 }
 
-input{
+input,select{
     border: 2px solid green;
     border-radius: 5px;
+}
+
+button{
+    padding: 4px 12px;
+    background: green;
+    border: 4px solid black;
+    border-radius:5px ;
+    margin: 10px 0px;
+    display: flex;
+    align-self: center;
 }
 
 /*===============================================*/
@@ -33,7 +48,13 @@ input{
     align-items: center;
 }
 
-.ABVInput{
+.formInput input, .formInput  select{
     display: flex;
     margin: 5px 0px;
+}
+
+#deleteButton{
+    background-color: red;
+    padding-left: 20px;
+    padding-right: 20px;
 }
