--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,11 +23,11 @@
       	</div>
 				<div>
 					<label for="ABV">ABV</label>
-      		<input id='ABV' name ="abv" type='number' inputmode="numeric" step ='.01' placeholder="Alcohol Percentage">
+      				<input id='ABV' name ="abv" type='number' inputmode="decimal" step ='.01' placeholder="Alcohol Percentage">
 				</div>
         <div>
 					<label for="quantity">quantity</label>
-      		<input id='quantity' name ="quantity" type="number" placeholder="Number of Beer">
+      		<input id='quantity' name ="quantity" type="number" inputmode="numeric" placeholder="Number of Beer">
 				</div>
 				<div>
 					<label for="volumes">Size</label>
