--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,12 @@ button{
     display: flex;
     align-self: center;
 }
+button:hover{
+    background: rgb(39, 194, 39);
+}
+button:focus{
+    background: rgba(0, 128, 0, 0.754);
+}
 
 h3{
     margin: 0px;
@@ -62,6 +68,15 @@ h3{
     background-color: red;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+#deleteButton:hover{
+    background-color: rgb(247, 75, 75);
+
+}
+#deleteButton:focus{
+    background-color: rgba(255, 0, 0, 0.548);
+
 }
 
 #results{
