Number of beer changed to number of beers

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
       		</div>
 			<div>
 				<label for="quantity">Quantity</label>
-      			<input id='quantity' name ="quantity" type="number" inputmode="numeric" placeholder="Number of Beer">
+      			<input id='quantity' name ="quantity" type="number" inputmode="numeric" placeholder="Number of Beers">
 			</div>
 			<div>
 				<label for="ABV">ABV</label>
