initializing branch test

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<main>
-		<h1>Suds 2 Buds</h1>
+		<h1>Suds 2 Buds Test</h1>
 		<h3><%= errorMessage %></h3>
 		<form method="POST" action="/beers">
 			<section class ="formInput">
