Succesfully recognize login

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,15 +2,15 @@
 <form action="/register" method="post">
     <div>
         <label for="nameRegister">Full Name</label>
-        <input id='nameRegister' name ="nameRegister" type="text" placeholder="Email" required>
+        <input id='nameRegister' name ="name" type="text" placeholder="Full Name" required>
     </div>
     <div>
         <label for="emailRegister">Email</label>
-        <input id='emailRegister' name ="emailRegister" type="email" placeholder="Email" required>
+        <input id='emailRegister' name ="email" type="email" placeholder="Email" required>
     </div>
     <div>
         <label for="passwordRegister">Password</label>
-        <input id='passwordRegister' name ="passwordRegister" type="text" placeholder="Email" required>
+        <input id='passwordRegister' name ="password" type="text" placeholder="Password" required>
     </div>
     <button type='submit' class="button">Register</button>
 </form>
