--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,15 @@
 <h1>Login to Suds2Buds</h1>
+<% if (messages.error) {%>
+    <%= messages.error %>
+    <% } %>
 <form action="/login" method="post">
     <div>
         <label for="emailLogin">Email</label>
-        <input id='emailLogin' name ="emailLogin" type="email" placeholder="Email" required>
+        <input id='emailLogin' name ="email" type="email" placeholder="Email" required>
     </div>
     <div>
         <label for="passwordLogin">Password</label>
-        <input id='passwordLogin' name ="passwordLogin" type="text" placeholder="Email" required>
+        <input id='passwordLogin' name ="password" type="text" placeholder="Email" required>
     </div>
     <button type='submit' class="button">Login</button>
 </form>
