--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ input,select{
     border-radius: 5px;
 }
 
-button{
+.button{
     padding: 4px 12px;
     background: green;
     border: 4px solid black;
@@ -47,6 +47,18 @@ h3{
     color: red;
 }
 
+.link{
+    color: navy;
+}
+.link:focus{
+    color: rgb(57, 179, 219);
+}
+
+h2{
+    margin-bottom:0px ;
+    text-align: center;
+}
+
 /*===============================================*/
 /* ------------- Class Styles -------------------*/
 /*===============================================*/
@@ -64,23 +76,46 @@ h3{
     margin: 5px 0px;
 }
 
+
+
+#logoutButton{
+    background-color: gray;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#logoutButton:hover{
+    background-color: rgb(173, 161, 161);
+}
+
+#logoutButton:focus{
+    background-color: rgb(33, 32, 32);
+}
+
+
 #deleteButton{
     background-color: red;
     padding-left: 20px;
     padding-right: 20px;
 }
-
 #deleteButton:hover{
-    background-color: rgb(247, 75, 75);
-
+    background-color: rgb(218, 57, 57);
 }
 #deleteButton:focus{
     background-color: rgba(255, 0, 0, 0.548);
-
 }
 
 #results{
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+
+#buttonDiv{
+    display: flex;
+    justify-content: space-between;
+}
+
+#buttonDiv button{
+    margin: 10px;
 }
