--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,15 +13,12 @@
 <body>
 	<main>
 		<h1>Suds 2 Buds Test</h1>
-		<h3><%= userName %></h3>
 
 		<h3><%= errorMessage %></h3>
+		<h2><%= userName %></h2>
+
 		<form method="POST" action="/beers">
 			<section class ="formInput">
-			<div>
-				<label for="fullName">Full name</label>
-			  <input id='fullName' name ="fullName" type="text" value="<%=userName%>" placeholder="Username" >
-			</div>
 		    <div>
       		<label for="beerName">Beer Name</label>
 			    <input id='beerName' name ="beerName" type="text" placeholder="Name of beer" >
@@ -46,20 +42,23 @@
 				<button class="button">Calculate</button>
 			</section>
     	</form>
-      <button id='deleteButton' class="button">Reset</button>
     <section id="results">
 
         <% for (let i =0;i<userBeerCollection.length;i++) {%>
 			<%if(i===0){%>
-				<h2><%=userName%> has had <%= userBudLight%> drinks</h2>
+				<h2><%=userName%> has consumed <%= userBudLight%> Bud Lights</h2>
 
 			<% }%>
             <p>I drank <%= userBeerCollection[i].quantity%> <%= userBeerCollection[i].beerName%>'s </p>
         <% } %>
     </section>
+	<div id="buttonDiv">
+	<button id='deleteButton' class="button">Reset</button>
 	<form method="POST" action="/logout?_method=DELETE">
-		<button type="'submit">Log out</button>
+		<button type="submit" class="button" id="logoutButton">Log out</button>
 	</form>
+	</div>
+
 	</main>
 </body>
 <script src="main.js"></script>
