input colors changed

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,17 +17,17 @@
             <section class="formInput">
             <div>
                 <label for="nameRegister">Name</label>
-                <input id='nameRegister' name ="name" type="text" placeholder="Full Name" required>
+                <input id='nameRegister' class='registerInput' name ="name" type="text" placeholder="Full Name" required>
             </div>
             <div>
                 <label for="emailRegister">Username</label>
-                <input id='emailRegister' name ="username" type="text" placeholder="Username" required>
+                <input id='emailRegister' class='registerInput' name ="username" type="text" placeholder="Username" required>
             </div>
             <div>
                 <label for="passwordRegister">Password</label>
-                <input id='passwordRegister' name ="password" type="text" placeholder="Password" required>
+                <input id='passwordRegister' class='registerInput' name ="password" type="text" placeholder="Password" required>
             </div>
-            <button type='submit' class="button">Register</button>
+            <button type='submit' class="button" id="registerButton">Register</button>
             </section>
         </form>
         <section>
