--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,7 +75,43 @@ h2{
     display: flex;
     margin: 5px 0px;
 }
+/* ------------- Register Page -------------------*/
 
+.registerInput{
+    border: 2px solid  rgb(25, 25, 146);
+}
+
+#registerButton{
+    background-color: rgb(60, 185, 185);
+}
+
+#registerButton:hover{
+    background-color: rgb(82, 136, 201);
+}
+#registerButton:focus{
+    background-color: rgb(60, 185, 185);
+}
+
+/* ---------------------------------------------*/
+
+/* ------------- Login Page -------------------*/
+
+.loginInput{
+    border: 2px solid  rgb(234, 36, 69);
+}
+
+#loginButton{
+    background-color:rgb(172, 23, 52);
+}
+
+#loginButton:hover{
+    background-color: pink;
+}
+#loginButton:focus{
+    background-color: green;
+}
+
+/* ---------------------------------------------*/
 
 
 #logoutButton{
@@ -91,6 +127,7 @@ h2{
 #logoutButton:focus{
     background-color: rgb(33, 32, 32);
 }
+
 
 
 #deleteButton{
