--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,13 +20,13 @@
             <section class="formInput">
                 <div>
                     <label for="nameLogin">Username</label>
-                    <input id='nameLogin' name ="username" type="text" placeholder="Username" required>
+                    <input id='nameLogin' class='loginInput' name ="username" type="text" placeholder="Username" required>
                 </div>
             <div>
                 <label for="passwordLogin">Password</label>
-                <input id='passwordLogin' name ="password" type="text" placeholder="Password" required>
+                <input id='passwordLogin' class='loginInput' name ="password" type="text" placeholder="Password" required>
             </div>
-            <button type='submit' class="button">Login</button>
+            <button type='submit' id='loginButton'class="button">Login</button>
             </section>
         </form>
         <section>
