--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<main>
-		<h1>Suds 2 Buds Test2</h1>
+		<h1>Suds 2 Buds</h1>
 
 		<h3><%= errorMessage %></h3>
 		<h2><%= userName %></h2>
