works for multiple users. Userarray removed.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
 
         <% for (let i =0;i<userBeerCollection.length;i++) {%>
 			<%if(i===0){%>
-				<h2><%=userName%> has consumed <%= userBudLight%> Bud Lights</h2>
+				<h2><%=userName%> has consumed <%= budLights%> Bud Lights</h2>
 
 			<% }%>
             <p>I drank <%= userBeerCollection[i].quantity%> <%= userBeerCollection[i].beerName%>'s </p>
