--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
-		</style>
-		<link rel="stylesheet" href="css/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
+    </style>
+    <link rel="stylesheet" href="css/style.css/">
     <title>Suds 2 Buds</title>
 </head>
+
 <body>
-	<main>
+    <main>
         <h1>Suds2Buds Login</h1>
-        <h3><% if (messages.error) {%>
-            <%= messages.error %>
-            <% } %></h3>
-        <form action="/login" method="post">
+        <h3>
+            <% if (messages.error) {%>
+                <%= messages.error %>
+                    <% } %>
+        </h3>
+        <form action="/login/" method="post">
             <section class="formInput">
                 <div>
                     <label for="nameLogin">Username</label>
-                    <input id='nameLogin' class='loginInput' name ="username" type="text" placeholder="Username" required>
+                    <input id='nameLogin' class='loginInput' name="username" type="text" placeholder="Username"
+                        required>
                 </div>
-            <div>
-                <label for="passwordLogin">Password</label>
-                <input id='passwordLogin' class='loginInput' name ="password" type="text" placeholder="Password" required>
-            </div>
-            <button type='submit' id='loginButton'class="button">Login</button>
+                <div>
+                    <label for="passwordLogin">Password</label>
+                    <input id='passwordLogin' class='loginInput' name="password" type="text" placeholder="Password"
+                        required>
+                </div>
+                <button type='submit' id='loginButton' class="button">Login</button>
             </section>
         </form>
         <section>
-            <p><a href ='/register' class="link">Register Here</a>
-            </section>
+            <p><a href='/register' class="link">Register Here</a>
+        </section>
     </main>
-    </body>
+</body>
 <script src="main.js"></script>
+
 </html>
