updated stylesheet links

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
     </style>
-    <link rel="stylesheet" href="css/style.css/">
+    <link rel="stylesheet" href="css/style.css">
     <title>Suds 2 Buds</title>
 </head>
 
@@ -36,7 +36,7 @@
             </section>
         </form>
         <section>
-            <p><a href='/register' class="link">Register Here</a>
+            <p><a href='/register/' class="link">Register Here</a>
         </section>
     </main>
 </body>
