--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
     </style>
-    <link rel="stylesheet" href="css/style.css/">
+    <link rel="stylesheet" href="css/style.css">
     <title>Suds 2 Buds</title>
 </head>
 
