cleaned code, added / prepend links

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
 	</style>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<title>Suds 2 Buds</title>
 </head>
 
@@ -72,6 +72,6 @@
 
 	</main>
 </body>
-<script src="main.js"></script>
+<script src="/main.js"></script>
 
 </html>
