--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,6 +15,11 @@
 <body>
     <main>
         <h1>Register for Suds2Buds</h1>
+        <h3>
+            <% if (errorMessage) {%>
+                <%= errorMessage %>
+                    <% } %>
+        </h3>
         <form action="/register/" method="post">
             <section class="formInput">
                 <div>
