--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,6 +20,10 @@
                 <%= messages.error %>
                     <% } %>
         </h3>
+        <h3 class="userAdded">
+            <%= userAddedSuccess %>
+
+        </h3>
         <form action="/login/" method="post">
             <section class="formInput">
                 <div>
