--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,61 +1,68 @@
 /*===============================================*/
 /* ------------- General Styles -----------------*/
 /*===============================================*/
-*{
+* {
     font-family: 'Inconsolata', monospace;
     box-sizing: border-box;
 }
 
-label, input, button{
+label,
+input,
+button {
     all: unset
 }
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
 
-main{
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-input,select{
+input,
+select {
     border: 2px solid green;
     border-radius: 5px;
 }
 
-.button{
+.button {
     padding: 4px 12px;
     background: green;
     border: 4px solid black;
-    border-radius:5px ;
+    border-radius: 5px;
     margin: 10px 0px;
     display: flex;
     align-self: center;
 }
-button:hover{
+
+button:hover {
     background: rgb(39, 194, 39);
 }
-button:focus{
+
+button:focus {
     background: rgba(0, 128, 0, 0.754);
 }
 
-h3{
+h3 {
     margin: 0px;
     color: red;
 }
 
-.link{
+.link {
     color: navy;
 }
-.link:focus{
+
+.link:focus {
     color: rgb(57, 179, 219);
 }
 
-h2{
-    margin-bottom:0px ;
+h2 {
+    margin-bottom: 0px;
     text-align: center;
 }
 
@@ -63,7 +70,7 @@ h2{
 /* ------------- Class Styles -------------------*/
 /*===============================================*/
 
-.formInput{
+.formInput {
     margin: 10px 0px;
     display: flex;
     flex-direction: column;
@@ -71,24 +78,27 @@ h2{
     align-items: center;
 }
 
-.formInput input, .formInput  select{
+.formInput input,
+.formInput select {
     display: flex;
     margin: 5px 0px;
 }
+
 /* ------------- Register Page -------------------*/
 
-.registerInput{
-    border: 2px solid  rgb(25, 25, 146);
+.registerInput {
+    border: 2px solid rgb(25, 25, 146);
 }
 
-#registerButton{
+#registerButton {
     background-color: rgb(60, 185, 185);
 }
 
-#registerButton:hover{
+#registerButton:hover {
     background-color: rgb(82, 136, 201);
 }
-#registerButton:focus{
+
+#registerButton:focus {
     background-color: rgb(60, 185, 185);
 }
 
@@ -96,63 +106,71 @@ h2{
 
 /* ------------- Login Page -------------------*/
 
-.loginInput{
-    border: 2px solid  rgb(234, 36, 69);
+.loginInput {
+    border: 2px solid rgb(234, 36, 69);
 }
 
-#loginButton{
-    background-color:rgb(172, 23, 52);
+.userAdded {
+    color: green;
+    margin: 0px;
 }
 
-#loginButton:hover{
+#loginButton {
+    background-color: rgb(172, 23, 52);
+}
+
+#loginButton:hover {
     background-color: pink;
 }
-#loginButton:focus{
+
+#loginButton:focus {
     background-color: green;
 }
 
 /* ---------------------------------------------*/
 
 
-#logoutButton{
+#logoutButton {
     background-color: gray;
     padding-left: 20px;
     padding-right: 20px;
 }
 
-#logoutButton:hover{
+#logoutButton:hover {
     background-color: rgb(173, 161, 161);
 }
 
-#logoutButton:focus{
+#logoutButton:focus {
     background-color: rgb(33, 32, 32);
 }
 
 
 
-#deleteButton{
+#deleteButton {
     background-color: red;
     padding-left: 20px;
     padding-right: 20px;
 }
-#deleteButton:hover{
+
+#deleteButton:hover {
     background-color: rgb(218, 57, 57);
 }
-#deleteButton:focus{
+
+#deleteButton:focus {
     background-color: rgba(255, 0, 0, 0.548);
 }
 
-#results{
+#results {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-#buttonDiv{
+#buttonDiv {
     display: flex;
     justify-content: space-between;
 }
 
-#buttonDiv button{
+#buttonDiv button {
     margin: 10px;
 }
